# Astro_crypto

./: .gitignore  README.md  astro_btc_analysis.py  astro_deep_analysis.py  astro_extended_analysis.py  astro_pivots_analysis.py  astro_scoring.py  btc_research.db  dashboard.py  main.py  pyproject.toml  run.py
backend/: app.py  db.py  middleware.py
backend/routers/: astro.py  backtest.py  config.py  cycle.py  market.py  regime.py  system.py  ws.py
backend/schemas/: __init__.py  system.py
backend/services/: cache_service.py  config_service.py  regime_service.py
dashboard/: auto_update.py  dashboard.py  market_regime.py
dashboard/static/: app.js
dashboard/templates/: index.html
data/: btc_peaks_valleys.csv  btc_research.db  market_feature_backtest_details.csv  market_feature_backtest_summary.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/backtest/: BacktestSection.tsx
frontend/src/components/calendar/: CalendarChart.tsx  CalendarSection.tsx
frontend/src/components/cycle/: CycleChart.tsx  CycleSection.tsx  cycleUtils.ts
frontend/src/components/hero/: HeroSection.tsx
frontend/src/components/layout/: TopBar.tsx
frontend/src/components/price/: PriceChart.tsx
frontend/src/hooks/: useDashboardData.ts  useWebSocket.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
frontend/src/utils/: dates.ts  format.ts  scores.ts
migrations/: runner.py
migrations/versions/: 001_add_indexes_and_config.py
research/: astro_backtest.py  astro_btc_analysis.py  astro_deep_analysis.py  astro_events.py  astro_extended_analysis.py  astro_natal_transits_test.py  astro_peak_low_correlation.py  astro_pivots_analysis.py  astro_scoring.py  astro_shared.py  backtest_market_features.py  backtesting.py  btc_cycle_indicators.py  btc_forecast_models.py  config.py  cycle_metrics.py  cycle_projections.py  derivatives_history.py  log.py  main.py  market_features.py
scripts/: migrate_to_duckdb.py
templates/: index.html
tests/: test_astro_shared.py  test_natal_transits.py
(+5 files in other folders)
