[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ideas"
version = "0.1.0"
description = "BTC research scripts and local dashboard for market and astro experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyephem>=9.99",
    "requests>=2.31",
    "scipy>=1.12",
    "yfinance>=0.2.54",
]

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["research*", "dashboard*"]
