[tool.poetry]
name = "crypto-ideas"
version = "0.1.0"
description = "BTC research scripts and local dashboard for market and astro experiments."
readme = "README.md"
packages = [
    { include = "research" },
    { include = "dashboard" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Flask = ">=3.0"
matplotlib = ">=3.8"
numpy = ">=1.26"
pandas = ">=2.2"
pyephem = ">=9.99"
requests = ">=2.31"
scipy = ">=1.12"
yfinance = ">=0.2.54"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
