[tool.poetry]
name = "crypto-ideas"
version = "0.1.0"
description = "BTC research scripts and local dashboard for market and astro experiments."
readme = "README.md"
packages = [
    { include = "research" },
    { include = "dashboard" },
    { include = "backend" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115"
uvicorn = {version = ">=0.34", extras = ["standard"]}
cachetools = ">=5.5"
matplotlib = ">=3.8"
numpy = ">=1.26"
pandas = ">=2.2"
pyephem = ">=9.99"
requests = ">=2.31"
scipy = ">=1.12"
yfinance = ">=0.2.54"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
httpx = ">=0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
